<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleFound"
        android:textSize="100px"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/titre"
        />

    <Button
        android:id="@+id/btn_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/more_info" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:id="@+id/image_result" />

    <Button
        android:id="@+id/btn_historique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_historique" />

</LinearLayout>